feat: introduce a news section with associated images and audio, and update the logo.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Rangaraju Lab | Neuroenergetics Research</title>
   <meta name="description"
     content="The official lab website of Dr. Vidhya Rangaraju, investigating mitochondrial function and neural energetics at Max Planck Florida." />
-  <link rel="icon" href="https://fav.farm/🧠" />
+  <link rel="icon" href="assets/logo.png" />
 
   <!-- Google Fonts: Inter -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
