docs: Update terminology from "neural energetics" to "neuroenergetics" across the site.

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rangaraju Lab | Neuroenergetics Research</title>
   <meta name="description"
-    content="The official lab website of Dr. Vidhya Rangaraju, investigating mitochondrial function and neural energetics at Max Planck Florida." />
+    content="The official lab website of Dr. Vidhya Rangaraju, investigating mitochondrial function and neuroenergetics at Max Planck Florida." />
   <link rel="icon" href="assets/logo.png" />
 
   <!-- Google Fonts: Inter -->
