feat: Add SEO and PWA configurations, and enhance structured data and accessibility across components.

--- a/index.html
+++ b/index.html
@@ -4,18 +4,85 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rangaraju Lab | Neuroenergetics Research</title>
+  <title>Rangaraju Lab | Neuroenergetics Research at Max Planck Florida</title>
   <meta name="description"
-    content="The official lab website of Dr. Vidhya Rangaraju, investigating mitochondrial function and neuroenergetics at Max Planck Florida." />
+    content="The Rangaraju Lab at Max Planck Florida Institute for Neuroscience investigates how neurons manage energy through mitochondrial function. Led by Dr. Vidhya Rangaraju, we study neuroenergetics, synaptic plasticity, and their implications for neurodegenerative diseases." />
+  <meta name="keywords"
+    content="neuroenergetics, mitochondria, neurons, synaptic plasticity, Max Planck Florida, Vidhya Rangaraju, neuroscience research, brain energy, ATP, neurodegenerative disease" />
+  <meta name="author" content="Dr. Vidhya Rangaraju" />
+  <meta name="robots" content="index, follow" />
+  <link rel="canonical" href="https://rangarajulab.com" />
   <link rel="icon" href="assets/logo.png" />
+  <link rel="manifest" href="manifest.json" />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://rangarajulab.com" />
+  <meta property="og:title" content="Rangaraju Lab | Neuroenergetics Research" />
+  <meta property="og:description"
+    content="Investigating how neurons manage their complex energy landscapes through mitochondrial function at Max Planck Florida Institute for Neuroscience." />
+  <meta property="og:image" content="https://rangarajulab.com/assets/logo.png" />
+  <meta property="og:site_name" content="Rangaraju Lab" />
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://rangarajulab.com" />
+  <meta name="twitter:title" content="Rangaraju Lab | Neuroenergetics Research" />
+  <meta name="twitter:description"
+    content="Investigating how neurons manage their complex energy landscapes through mitochondrial function at Max Planck Florida Institute for Neuroscience." />
+  <meta name="twitter:image" content="https://rangarajulab.com/assets/logo.png" />
+  <meta name="twitter:creator" content="@RangarajuVidhya" />
+
+  <!-- Preconnect for external resources -->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
   <!-- Google Fonts: Inter -->
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
 
   <!-- FontAwesome -->
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
+
+  <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ResearchOrganization",
+    "name": "Rangaraju Lab",
+    "alternateName": "Neuroenergetics Lab",
+    "url": "https://rangarajulab.com",
+    "logo": "https://rangarajulab.com/assets/logo.png",
+    "description": "The Rangaraju Lab investigates how neurons manage their complex energy landscapes to fuel biological processes, plasticity, and health.",
+    "parentOrganization": {
+      "@type": "ResearchOrganization",
+      "name": "Max Planck Florida Institute for Neuroscience",
+      "url": "https://mpfi.org"
+    },
+    "address": {
+      "@type": "PostalAddress",
+      "addressLocality": "Jupiter",
+      "addressRegion": "FL",
+      "addressCountry": "US"
+    },
+    "founder": {
+      "@type": "Person",
+      "name": "Dr. Vidhya Rangaraju",
+      "jobTitle": "Research Group Leader",
+      "affiliation": "Max Planck Florida Institute for Neuroscience",
+      "url": "https://mpfi.org/science/our-labs/rangaraju-lab/",
+      "sameAs": [
+        "https://x.com/RangarajuVidhya",
+        "https://www.linkedin.com/in/vidhyarangarajuphd/",
+        "https://scholar.google.com/citations?user=uudWngwAAAAJ&hl=en"
+      ]
+    },
+    "sameAs": [
+      "https://x.com/RangarajuVidhya",
+      "https://www.linkedin.com/in/vidhyarangarajuphd/"
+    ]
+  }
+  </script>
 
   <!-- Tailwind CSS -->
   <script src="https://cdn.tailwindcss.com"></script>
