--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
   <meta name="author" content="Dr. Vidhya Rangaraju" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://rangarajulab.com" />
-  <link rel="icon" href="assets/logo.png" />
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="logo-192.png" />
+  <link rel="apple-touch-icon" href="logo-192.png" />
   <link rel="manifest" href="manifest.json" />
 
   <!-- Open Graph / Facebook -->
@@ -45,6 +47,14 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" />
 
   <!-- Structured Data (JSON-LD) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Rangaraju Lab",
+    "url": "https://rangarajulab.com"
+  }
+  </script>
   <script type="application/ld+json">
   {
     "@context": "https://schema.org",
