--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
   <meta name="author" content="Dr. Vidhya Rangaraju" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://rangarajulab.com" />
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon.png" />
-  <link rel="icon" type="image/png" sizes="192x192" href="logo-192.png" />
-  <link rel="apple-touch-icon" href="logo-192.png" />
-  <link rel="manifest" href="manifest.json" />
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon.png?v=2" />
+  <link rel="icon" type="image/png" sizes="192x192" href="logo-192.png?v=2" />
+  <link rel="apple-touch-icon" href="logo-192.png?v=2" />
+  <link rel="manifest" href="manifest.json?v=2" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
