feat: Update branding with new logos and favicons, and enhance team section to display awards and publications.

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
   <meta name="author" content="Dr. Vidhya Rangaraju" />
   <meta name="robots" content="index, follow" />
   <link rel="canonical" href="https://rangarajulab.com" />
-  <link rel="icon" type="image/png" sizes="96x96" href="favicon.png?v=2" />
-  <link rel="icon" type="image/png" sizes="192x192" href="logo-192.png?v=2" />
-  <link rel="apple-touch-icon" href="logo-192.png?v=2" />
-  <link rel="manifest" href="manifest.json?v=2" />
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=4" />
+  <link rel="icon" type="image/png" sizes="64x64" href="favicon.png?v=4" />
+  <link rel="icon" type="image/png" sizes="192x192" href="logo-192.png?v=4" />
+  <link rel="apple-touch-icon" href="logo-192.png?v=4" />
+  <link rel="manifest" href="manifest.json?v=4" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
@@ -23,7 +24,7 @@
   <meta property="og:title" content="Rangaraju Lab | Neuroenergetics Research" />
   <meta property="og:description"
     content="Investigating how neurons manage their complex energy landscapes through mitochondrial function at Max Planck Florida Institute for Neuroscience." />
-  <meta property="og:image" content="https://rangarajulab.com/assets/logo.png" />
+  <meta property="og:image" content="https://rangarajulab.com/assets/logo-final.png" />
   <meta property="og:site_name" content="Rangaraju Lab" />
 
   <!-- Twitter Card -->
@@ -32,7 +33,7 @@
   <meta name="twitter:title" content="Rangaraju Lab | Neuroenergetics Research" />
   <meta name="twitter:description"
     content="Investigating how neurons manage their complex energy landscapes through mitochondrial function at Max Planck Florida Institute for Neuroscience." />
-  <meta name="twitter:image" content="https://rangarajulab.com/assets/logo.png" />
+  <meta name="twitter:image" content="https://rangarajulab.com/assets/logo-final.png" />
   <meta name="twitter:creator" content="@RangarajuVidhya" />
 
   <!-- Preconnect for external resources -->
@@ -62,7 +63,7 @@
     "name": "Rangaraju Lab",
     "alternateName": "Neuroenergetics Lab",
     "url": "https://rangarajulab.com",
-    "logo": "https://rangarajulab.com/assets/logo.png",
+    "logo": "https://rangarajulab.com/assets/logo-final.png",
     "description": "The Rangaraju Lab investigates how neurons manage their complex energy landscapes to fuel biological processes, plasticity, and health.",
     "parentOrganization": {
       "@type": "ResearchOrganization",
