feat: Introduce new lab, NIH, and CZI logos, update branding across the site, and refine contact and bio components.

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <meta property="og:title" content="Rangaraju Lab | Neuroenergetics Research" />
   <meta property="og:description"
     content="Investigating how neurons manage their complex energy landscapes through mitochondrial function at Max Planck Florida Institute for Neuroscience." />
-  <meta property="og:image" content="https://rangarajulab.com/assets/logo-final.png" />
+  <meta property="og:image" content="https://rangarajulab.com/assets/logo-brain-bulb.png" />
   <meta property="og:site_name" content="Rangaraju Lab" />
 
   <!-- Twitter Card -->
@@ -33,7 +33,7 @@
   <meta name="twitter:title" content="Rangaraju Lab | Neuroenergetics Research" />
   <meta name="twitter:description"
     content="Investigating how neurons manage their complex energy landscapes through mitochondrial function at Max Planck Florida Institute for Neuroscience." />
-  <meta name="twitter:image" content="https://rangarajulab.com/assets/logo-final.png" />
+  <meta name="twitter:image" content="https://rangarajulab.com/assets/logo-brain-bulb.png" />
   <meta name="twitter:creator" content="@RangarajuVidhya" />
 
   <!-- Preconnect for external resources -->
@@ -63,7 +63,7 @@
     "name": "Rangaraju Lab",
     "alternateName": "Neuroenergetics Lab",
     "url": "https://rangarajulab.com",
-    "logo": "https://rangarajulab.com/assets/logo-final.png",
+    "logo": "https://rangarajulab.com/assets/logo-brain-bulb.png",
     "description": "The Rangaraju Lab investigates how neurons manage their complex energy landscapes to fuel biological processes, plasticity, and health.",
     "parentOrganization": {
       "@type": "ResearchOrganization",
