--- a/index.html
+++ b/index.html
@@ -122,6 +122,10 @@
     html {
       scroll-behavior: smooth;
     }
+
+    section {
+      scroll-margin-top: 100px;
+    }
   </style>
 </head>
 
