feat: Migrate site to .org domain, update SEO metadata, sitemap, and refresh favicons/app icons.

--- a/index.html
+++ b/index.html
@@ -6,35 +6,40 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Rangaraju Lab | Neuroenergetics Research at Max Planck Florida</title>
   <meta name="description"
-    content="The Rangaraju Lab at Max Planck Florida Institute for Neuroscience investigates how neurons manage energy through mitochondrial function. Led by Dr. Vidhya Rangaraju, we study neuroenergetics, synaptic plasticity, and their implications for neurodegenerative diseases." />
+    content="Explore how neurons fuel brain function. The Rangaraju Lab at Max Planck Florida studies mitochondria, synaptic energy, and neurodegeneration. Led by Dr. Vidhya Rangaraju." />
   <meta name="keywords"
-    content="neuroenergetics, mitochondria, neurons, synaptic plasticity, Max Planck Florida, Vidhya Rangaraju, neuroscience research, brain energy, ATP, neurodegenerative disease" />
+    content="neuroenergetics, mitochondria, neurons, synaptic plasticity, Max Planck Florida, Vidhya Rangaraju, neuroscience research, brain energy, ATP, neurodegenerative disease, MPFI, neuroenergetics lab" />
   <meta name="author" content="Dr. Vidhya Rangaraju" />
-  <meta name="robots" content="index, follow" />
-  <link rel="canonical" href="https://rangarajulab.com" />
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32.png?v=4" />
-  <link rel="icon" type="image/png" sizes="64x64" href="favicon.png?v=4" />
-  <link rel="icon" type="image/png" sizes="192x192" href="logo-192.png?v=4" />
-  <link rel="apple-touch-icon" href="logo-192.png?v=4" />
-  <link rel="manifest" href="manifest.json?v=4" />
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  <link rel="canonical" href="https://rangarajulab.org" />
+  <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png?v=5" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=5" />
+  <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png?v=5" />
+  <link rel="icon" type="image/png" sizes="192x192" href="/logo-192.png?v=5" />
+  <link rel="apple-touch-icon" sizes="192x192" href="/logo-192.png?v=5" />
+  <link rel="manifest" href="/manifest.json?v=5" />
 
   <!-- Open Graph / Facebook -->
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://rangarajulab.com" />
-  <meta property="og:title" content="Rangaraju Lab | Neuroenergetics Research" />
+  <meta property="og:url" content="https://rangarajulab.org" />
+  <meta property="og:title" content="Rangaraju Lab | Neuroenergetics Research at Max Planck Florida" />
   <meta property="og:description"
-    content="Investigating how neurons manage their complex energy landscapes through mitochondrial function at Max Planck Florida Institute for Neuroscience." />
-  <meta property="og:image" content="https://rangarajulab.com/assets/logo-brain-bulb.png" />
+    content="Explore how neurons fuel brain function. We study mitochondria, synaptic energy, and neurodegeneration at Max Planck Florida Institute for Neuroscience." />
+  <meta property="og:image" content="https://rangarajulab.org/assets/logo-brain-bulb.png" />
+  <meta property="og:image:width" content="1200" />
+  <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Rangaraju Lab" />
+  <meta property="og:locale" content="en_US" />
 
   <!-- Twitter Card -->
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:url" content="https://rangarajulab.com" />
-  <meta name="twitter:title" content="Rangaraju Lab | Neuroenergetics Research" />
+  <meta name="twitter:url" content="https://rangarajulab.org" />
+  <meta name="twitter:title" content="Rangaraju Lab | Neuroenergetics Research at Max Planck Florida" />
   <meta name="twitter:description"
-    content="Investigating how neurons manage their complex energy landscapes through mitochondrial function at Max Planck Florida Institute for Neuroscience." />
-  <meta name="twitter:image" content="https://rangarajulab.com/assets/logo-brain-bulb.png" />
+    content="Explore how neurons fuel brain function. We study mitochondria, synaptic energy, and neurodegeneration at Max Planck Florida Institute for Neuroscience." />
+  <meta name="twitter:image" content="https://rangarajulab.org/assets/logo-brain-bulb.png" />
   <meta name="twitter:creator" content="@RangarajuVidhya" />
+  <meta name="twitter:site" content="@RangarajuVidhya" />
 
   <!-- Preconnect for external resources -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -53,7 +58,13 @@
     "@context": "https://schema.org",
     "@type": "WebSite",
     "name": "Rangaraju Lab",
-    "url": "https://rangarajulab.com"
+    "alternateName": ["Rangaraju Laboratory", "Neuroenergetics Lab", "MPFI Rangaraju Lab"],
+    "url": "https://rangarajulab.org",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://rangarajulab.org/?s={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
   }
   </script>
   <script type="application/ld+json">
@@ -62,8 +73,8 @@
     "@type": "ResearchOrganization",
     "name": "Rangaraju Lab",
     "alternateName": "Neuroenergetics Lab",
-    "url": "https://rangarajulab.com",
-    "logo": "https://rangarajulab.com/assets/logo-brain-bulb.png",
+    "url": "https://rangarajulab.org",
+    "logo": "https://rangarajulab.org/assets/logo-brain-bulb.png",
     "description": "The Rangaraju Lab investigates how neurons manage their complex energy landscapes to fuel biological processes, plasticity, and health.",
     "parentOrganization": {
       "@type": "ResearchOrganization",
