--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <meta property="og:title" content="Rangaraju Lab | Neuroenergetics Research at Max Planck Florida" />
   <meta property="og:description"
     content="Explore how neurons fuel brain function. We study mitochondria, synaptic energy, and neurodegeneration at Max Planck Florida Institute for Neuroscience." />
-  <meta property="og:image" content="https://rangarajulab.org/assets/logo-brain-bulb.png" />
+  <meta property="og:image" content="https://rangarajulab.org/assets/dr-vidhya-rangaraju.jpg" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Rangaraju Lab" />
@@ -37,7 +37,7 @@
   <meta name="twitter:title" content="Rangaraju Lab | Neuroenergetics Research at Max Planck Florida" />
   <meta name="twitter:description"
     content="Explore how neurons fuel brain function. We study mitochondria, synaptic energy, and neurodegeneration at Max Planck Florida Institute for Neuroscience." />
-  <meta name="twitter:image" content="https://rangarajulab.org/assets/logo-brain-bulb.png" />
+  <meta name="twitter:image" content="https://rangarajulab.org/assets/dr-vidhya-rangaraju.jpg" />
   <meta name="twitter:creator" content="@RangarajuVidhya" />
   <meta name="twitter:site" content="@RangarajuVidhya" />
 
@@ -90,6 +90,7 @@
     "founder": {
       "@type": "Person",
       "name": "Dr. Vidhya Rangaraju",
+      "image": "https://rangarajulab.org/assets/dr-vidhya-rangaraju.jpg",
       "jobTitle": "Research Group Leader",
       "affiliation": "Max Planck Florida Institute for Neuroscience",
       "url": "https://mpfi.org/science/our-labs/rangaraju-lab/",
