feat: enhance award badge responsiveness and text handling in Bio.tsx and update viewport meta tag in index.html.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no" />
   <title>Rangaraju Lab | Neuroenergetics Research at Max Planck Florida</title>
   <meta name="description"
     content="Explore how neurons fuel brain function. The Rangaraju Lab at Max Planck Florida studies mitochondria, synaptic energy, and neurodegeneration. Led by Dr. Vidhya Rangaraju." />
