--- a/index.html
+++ b/index.html
@@ -12,11 +12,8 @@
   <meta name="author" content="Dr. Vidhya Rangaraju" />
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   <link rel="canonical" href="https://rangarajulab.org" />
-  <link rel="icon" type="image/png" sizes="48x48" href="/favicon-48.png?v=5" />
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png?v=5" />
-  <link rel="icon" type="image/png" sizes="64x64" href="/favicon-64.png?v=5" />
-  <link rel="icon" type="image/png" sizes="192x192" href="/logo-192.png?v=5" />
-  <link rel="apple-touch-icon" sizes="192x192" href="/logo-192.png?v=5" />
+  <link rel="icon" type="image/png" href="/favicon.png" />
+  <link rel="apple-touch-icon" href="/favicon.png" />
   <link rel="manifest" href="/manifest.json?v=5" />
 
   <!-- Open Graph / Facebook -->
