feat: Update favicons, social media images, and schema.org branding assets.

--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
   <meta name="author" content="Dr. Vidhya Rangaraju" />
   <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
   <link rel="canonical" href="https://rangarajulab.org" />
-  <link rel="icon" type="image/png" href="/favicon.png" />
-  <link rel="apple-touch-icon" href="/favicon.png" />
+  <link rel="icon" type="image/png" href="/favicon-48.png" />
+  <link rel="apple-touch-icon" href="/logo-192.png" />
+  <meta name="thumbnail" content="https://rangarajulab.org/assets/hero-bg.png" />
   <link rel="manifest" href="/manifest.json?v=5" />
 
   <!-- Open Graph / Facebook -->
@@ -22,7 +23,7 @@
   <meta property="og:title" content="Rangaraju Lab | Neuroenergetics Research at Max Planck Florida" />
   <meta property="og:description"
     content="Explore how neurons fuel brain function. We study mitochondria, synaptic energy, and neurodegeneration at Max Planck Florida Institute for Neuroscience." />
-  <meta property="og:image" content="https://rangarajulab.org/assets/dr-vidhya-rangaraju.jpg" />
+  <meta property="og:image" content="https://rangarajulab.org/assets/hero-bg.png" />
   <meta property="og:image:width" content="1200" />
   <meta property="og:image:height" content="630" />
   <meta property="og:site_name" content="Rangaraju Lab" />
@@ -34,7 +35,7 @@
   <meta name="twitter:title" content="Rangaraju Lab | Neuroenergetics Research at Max Planck Florida" />
   <meta name="twitter:description"
     content="Explore how neurons fuel brain function. We study mitochondria, synaptic energy, and neurodegeneration at Max Planck Florida Institute for Neuroscience." />
-  <meta name="twitter:image" content="https://rangarajulab.org/assets/dr-vidhya-rangaraju.jpg" />
+  <meta name="twitter:image" content="https://rangarajulab.org/assets/hero-bg.png" />
   <meta name="twitter:creator" content="@RangarajuVidhya" />
   <meta name="twitter:site" content="@RangarajuVidhya" />
 
@@ -71,7 +72,8 @@
     "name": "Rangaraju Lab",
     "alternateName": "Neuroenergetics Lab",
     "url": "https://rangarajulab.org",
-    "logo": "https://rangarajulab.org/assets/logo-brain-bulb.png",
+    "logo": "https://rangarajulab.org/assets/logo-final-transparent.png",
+    "image": "https://rangarajulab.org/assets/hero-bg.png",
     "description": "The Rangaraju Lab investigates how neurons manage their complex energy landscapes to fuel biological processes, plasticity, and health.",
     "parentOrganization": {
       "@type": "ResearchOrganization",
