Add always-visible scrollbar to open positions modal on mobile

--- a/index.html
+++ b/index.html
@@ -166,6 +166,31 @@
       /* neuro-500 */
       animation: bio-glow 2s infinite ease-in-out;
     }
+
+    /* Always visible scrollbar for mobile modals */
+    .mobile-scroll-visible {
+      overflow-y: scroll !important;
+      -webkit-overflow-scrolling: touch;
+    }
+
+    .mobile-scroll-visible::-webkit-scrollbar {
+      width: 6px;
+      display: block !important;
+    }
+
+    .mobile-scroll-visible::-webkit-scrollbar-track {
+      background: #f1f5f9;
+      border-radius: 3px;
+    }
+
+    .mobile-scroll-visible::-webkit-scrollbar-thumb {
+      background: #94a3b8;
+      border-radius: 3px;
+    }
+
+    .mobile-scroll-visible::-webkit-scrollbar-thumb:hover {
+      background: #64748b;
+    }
   </style>
 </head>
 
