--- a/index.html
+++ b/index.html
@@ -167,29 +167,15 @@
       animation: bio-glow 2s infinite ease-in-out;
     }
 
-    /* Always visible scrollbar for mobile modals */
-    .mobile-scroll-visible {
-      overflow-y: scroll !important;
-      -webkit-overflow-scrolling: touch;
+    .visible-scrollbar::-webkit-scrollbar {
+      -webkit-appearance: none;
+      width: 7px;
     }
 
-    .mobile-scroll-visible::-webkit-scrollbar {
-      width: 6px;
-      display: block !important;
-    }
-
-    .mobile-scroll-visible::-webkit-scrollbar-track {
-      background: #f1f5f9;
-      border-radius: 3px;
-    }
-
-    .mobile-scroll-visible::-webkit-scrollbar-thumb {
-      background: #94a3b8;
-      border-radius: 3px;
-    }
-
-    .mobile-scroll-visible::-webkit-scrollbar-thumb:hover {
-      background: #64748b;
+    .visible-scrollbar::-webkit-scrollbar-thumb {
+      border-radius: 4px;
+      background-color: rgba(94, 100, 110, 0.5);
+      -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
     }
   </style>
 </head>
