--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link rel="preconnect" href="https://cdnjs.cloudflare.com" />
 
-  <!-- Google Fonts: Inter -->
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <!-- Google Fonts: Inter & Libre Baskerville -->
+  <link
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+    rel="stylesheet" />
 
   <!-- FontAwesome -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" />
@@ -114,6 +116,7 @@
         extend: {
           fontFamily: {
             sans: ['Inter', 'sans-serif'],
+            serif: ['"Libre Baskerville"', 'serif'],
           },
           colors: {
             neuro: {
@@ -165,17 +168,6 @@
       color: #14b8a6;
       /* neuro-500 */
       animation: bio-glow 2s infinite ease-in-out;
-    }
-
-    .visible-scrollbar::-webkit-scrollbar {
-      -webkit-appearance: none;
-      width: 7px;
-    }
-
-    .visible-scrollbar::-webkit-scrollbar-thumb {
-      border-radius: 4px;
-      background-color: rgba(94, 100, 110, 0.5);
-      -webkit-box-shadow: 0 0 1px rgba(255, 255, 255, .5);
     }
   </style>
 </head>
